fixed calendar flicker on safari

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2282,9 +2282,9 @@ div.header h4{
     background-color: rgba(255, 255, 255, 0.552);
     overflow-x: hidden;
     padding-top: 60px;
-    transition: all 300ms cubic-bezier(0.700, -0.445, 0.000, 1.385);
+    transition:  300ms cubic-bezier(0.700, -0.445, 0.000, 1.385);
     transition-timing-function: cubic-bezier(1.000, -0.445, 0.000, 1.385);
-    -webkit-backdrop-filter: blur(50px);
+
     backdrop-filter: blur(50px);
     border-top-right-radius: 50px;
     /* text-shadow: 2px 2px 5px rgba(150, 150, 150, 0.5);
@@ -2297,6 +2297,7 @@ div.header h4{
     -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
+    -webkit-backdrop-filter: blur(50px);
 
     /*button color*/
     /*color: #c32b3e;*/
@@ -2482,6 +2483,9 @@ div.header h4{
     top: 200px;
     padding: 30px;
     padding-top: 122px;
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
 }
 
 .fc .fc-daygrid-day.fc-day-today {
